--- a/src/pages/Product/styles.scss
+++ b/src/pages/Product/styles.scss
@@ -68,3 +68,34 @@
   height: 100%;
   object-fit: contain;
 }
+.wrapperInput {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 1rem;
+  margin-bottom: 1rem;
+  input {
+    width: 100%;
+    height: 2.5rem;
+    border: 1px solid #eaeaea;
+    border-radius: 5px;
+    padding: 0 0.5rem;
+  }
+  select {
+    width: 100%;
+    height: 2.5rem;
+    border: 1px solid #eaeaea;
+    border-radius: 5px;
+    padding: 0 0.5rem;
+
+    &:focus {
+      outline: none;
+    }
+  }
+  option {
+    width: 100%;
+    height: 2.5rem;
+    border: 1px solid #eaeaea;
+    border-radius: 5px;
+    padding: 0 0.5rem;
+  }
+}
