--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -1,11 +1,28 @@
 .container {
     height: 100vh;
-    background-color: rgb(2, 2, 27);
-
+    background-color: #312E38;
+    display: flex;
+    align-items: stretch;
+  }
+  
+  .content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-
-    color: white;
-}
+    place-content: center;
+  
+    width: 100%;
+  
+    p {
+        font-size: 1.2rem;
+        color: #fff;
+        margin-top: 16px;
+    }
+    form {
+      margin: 3.5rem 0;
+      width: 340px;
+      text-align: center;
+    }
+  }
+  
+  
