--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -24,3 +24,25 @@
     font-weight: 600;
   }
 }
+.containerButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 0 1rem;
+  button {
+    margin-top: 6rem;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    color: #000;
+    font-weight: 600;
+    border: 0;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+  }
+}
