--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -7,13 +7,25 @@
     margin-top: 2rem;
     margin-bottom: 2rem;
     border-bottom: 1px solid #eaeaea;
+    @media screen and (max-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (max-width: 480px) {
+      flex-direction: column;
+    }
   }
 
   .products {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    @media screen and (max-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (max-width: 480px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 }
