--- a/src/pages/Product/styles.scss
+++ b/src/pages/Product/styles.scss
@@ -10,6 +10,9 @@
     justify-content: space-between;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    @media screen and (max-width: 480px) {
+      flex-direction: column;
+    }
   }
   .table {
     width: 100%;
